[gd_scene load_steps=12 format=3 uid="uid://csq0r4i000xch"]

[ext_resource type="Script" path="res://src/world.gd" id="1_3klmo"]
[ext_resource type="PackedScene" uid="uid://c2aj5tgumrbpo" path="res://src/menu/finish_menu.tscn" id="2_1x2xs"]
[ext_resource type="Texture2D" uid="uid://cbveomv0sowod" path="res://src/icon.svg" id="2_o4qr1"]
[ext_resource type="PackedScene" uid="uid://ksdjb1tbboha" path="res://src/character/player.tscn" id="5_45di6"]
[ext_resource type="Texture2D" uid="uid://u56fn0gs47h0" path="res://assets/Floor1.png" id="6_g7tw4"]
[ext_resource type="PackedScene" uid="uid://bcqe81pkyl74u" path="res://src/character/enemy.tscn" id="6_oa04e"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_knbie"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_fwevs"]
sky_material = SubResource("ProceduralSkyMaterial_knbie")

[sub_resource type="Environment" id="Environment_cnr5b"]
background_mode = 3
sky = SubResource("Sky_fwevs")
ambient_light_source = 3
tonemap_mode = 2
glow_enabled = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvxvk"]
size = Vector2(1024, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s4duf"]
size = Vector2(256, 1e+06)

[node name="World" type="Node"]
script = ExtResource("1_3klmo")
next_scene = ExtResource("2_1x2xs")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_cnr5b")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 3, 0)
shadow_enabled = true

[node name="Parallax2D" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
scale = Vector2(1.076, 1.076)
texture = ExtResource("6_g7tw4")
centered = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(512, 1000)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_wvxvk")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
modulate = Color(0, 0, 0, 1)
scale = Vector2(8, 0.25)
texture = ExtResource("2_o4qr1")

[node name="NextLevel" type="Area2D" parent="."]
position = Vector2(1000, 0)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevel"]
shape = SubResource("RectangleShape2D_s4duf")

[node name="Player" parent="." instance=ExtResource("5_45di6")]
position = Vector2(200, 968)

[node name="Enemy" parent="." node_paths=PackedStringArray("target") instance=ExtResource("6_oa04e")]
position = Vector2(600, 968)
target = NodePath("../Player")

[node name="PointTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 100.0
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_right = 264.0
offset_bottom = 186.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Health: "

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "A - Left
D - Right
E - Punch
Q - Kick
␣ - Jump (disabled)
⇧ - Crouch"

[connection signal="body_entered" from="NextLevel" to="." method="_on_next_level_body_entered" flags=3]
